# sock_test

./: .gitignore  CMakeLists.txt  README.md
file/: ofm.txt
include/: data_type.h  file_handle.h  parse_xml.h  task.h  tcp_sock.h  udp_sock.h
src/: file_handle.cpp  main  main.cpp  parse_xml.cpp  sock_xml  task.cpp  tcp_sock.cpp  udp_sock.cpp
xml/: back.xml  client.xml  clients.xml  kvs.xml  server.xml  servers.xml  task_info.xml
